contents/en/documents/2.7: v2.7.4 released

--- a/contents/en/documents/2.7.html
+++ b/contents/en/documents/2.7.html
@@ -111,3 +111,10 @@ Factor</code></a></td>
 <ul>
   <li>Fixed an issue where <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ScreenSizeInFullscreen"><code>ebiten.ScreenSizeInFullscreen</code></a> would crash in the browser (<a href="https://github.com/hajimehoshi/ebiten/issues/2975">#2975</a>).</li>
 </ul>
+<h2>v2.7.4</h2>
+<p>Starting from this version, Go 1.18 is no longer supported. This is because we needed to update dependencies that do not support Go 1.18.</p>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/129?closed=1">Issues for v2.7.4</a></p>
+<ul>
+  <li>Fixed an issue where the <code>ebitenmobile</code> command did not work with Android SDK 34 (<a href="https://github.com/hajimehoshi/ebiten/issues/2992">#2992</a>).</li>
+</ul>
