--- a/contents/ja/documents/2.7.html
+++ b/contents/ja/documents/2.7.html
@@ -107,3 +107,10 @@
 <ul>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ScreenSizeInFullscreen"><code>ebiten.ScreenSizeInFullscreen</code></a> がブラウザでクラッシュした問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2975">#2975</a>)。</li>
 </ul>
+<h2>v2.7.4</h2>
+<p>このバージョンから、 Go 1.18 がサポートされなくなりました。 Go 1.18 をサポートしない依存ライブラリを更新する必要があったためです。</p>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/129?closed=1">Issues for v2.7.4</a></p>
+<ul>
+  <li>Android SDK 34 で <code>ebitenmobile</code> コマンドが動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2992">#2992</a>)。</li>
+</ul>
