contents/en/documents/2.7: v2.7.5 released

--- a/contents/ja/documents/2.7.html
+++ b/contents/ja/documents/2.7.html
@@ -114,3 +114,9 @@
 <ul>
   <li>Android SDK 34 で <code>ebitenmobile</code> コマンドが動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2992">#2992</a>)。</li>
 </ul>
+<h2>v2.7.5</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/130?closed=1">Issues for v2.7.5</a></p>
+<ul>
+  <li><code>exp/textinput</code> がブラウザで正しく動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3014">#3014</a>)。</li>
+</ul>
