--- a/contents/en/documents/2.7.html
+++ b/contents/en/documents/2.7.html
@@ -118,3 +118,9 @@ Factor</code></a></td>
 <ul>
   <li>Fixed an issue where the <code>ebitenmobile</code> command did not work with Android SDK 34 (<a href="https://github.com/hajimehoshi/ebiten/issues/2992">#2992</a>).</li>
 </ul>
+<h2>v2.7.5</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/130?closed=1">Issues for v2.7.5</a></p>
+<ul>
+  <li>Fixed an issue where <code>exp/textinput</code> did not work correctly in browsers (<a href="https://github.com/hajimehoshi/ebiten/issues/3014">#3014</a>).</li>
+</ul>
