--- a/contents/ja/documents/install.html
+++ b/contents/ja/documents/install.html
@@ -51,6 +51,8 @@
     <pre><code>sudo pacman -S mesa libxrandr libxcursor libxinerama libxi pkg-config</code></pre>
     <h3>Alpine</h3>
     <pre><code>sudo apk add alsa-lib-dev libx11-dev libxrandr-dev libxcursor-dev libxinerama-dev libxi-dev mesa-dev pkgconf</code></pre>
+    <h3>Void</h3>
+    <pre><code>sudo xbps-install libXxf86vm-devel pkg-config</code></pre>
   </div>
   <div data-tags="freebsd">
     <pre><code>pkg install alsa-lib libxcursor libxi libxinerama libxrandr mesa-libs pkgconf</code></pre>
