contents/index: update

--- a/contents/index.html
+++ b/contents/index.html
@@ -108,7 +108,7 @@
   <div class="grid-item-1">
     <figure>
       <p class="img avatar"><img src="https://github.com/github.png?size=168" width="168"></p>
-      <figcaption>(And one other person)</figcaption>
+      <figcaption>(And 2 other people)</figcaption>
     </figure>
   </div>
 </div>
