--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -108,7 +108,7 @@
   <div class="grid-item-1">
     <figure>
       <p class="img avatar"><img src="https://github.com/github.png?size=168" width="168"></p>
-      <figcaption>(他一名)</figcaption>
+      <figcaption>(他 2 名)</figcaption>
     </figure>
   </div>
 </div>
