--- a/contents/index.html
+++ b/contents/index.html
@@ -108,7 +108,13 @@
   <div class="grid-item-1">
     <figure>
       <p class="img avatar"><img src="https://github.com/github.png?size=168" width="168"></p>
-      <figcaption>(And 2 other people)</figcaption>
+      <figcaption>Jordan Dziat</figcaption>
+    </figure>
+  </div>
+  <div class="grid-item-1">
+    <figure>
+      <p class="img avatar"><img src="https://github.com/github.png?size=168" width="168"></p>
+      <figcaption>(And 1 other person)</figcaption>
     </figure>
   </div>
 </div>
