contents/index: update an icon

--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -107,13 +107,13 @@
   </div>
   <div class="grid-item-1">
     <figure>
-      <p class="img avatar"><img src="https://github.com/github.png?size=168" width="168"></p>
+      <p class="img avatar"><img src="/images/gopher.png" width="168"></p>
       <figcaption>Jordan Dziat さん</figcaption>
     </figure>
   </div>
   <div class="grid-item-1">
     <figure>
-      <p class="img avatar"><img src="https://github.com/github.png?size=168" width="168"></p>
+      <p class="img avatar"><img src="/images/gopher.png" width="168"></p>
       <figcaption>(他 1 名)</figcaption>
     </figure>
   </div>
