--- a/contents/index.html
+++ b/contents/index.html
@@ -107,13 +107,13 @@
   </div>
   <div class="grid-item-1">
     <figure>
-      <p class="img avatar"><img src="https://github.com/github.png?size=168" width="168"></p>
+      <p class="img avatar"><img src="/images/gopher.png" width="168"></p>
       <figcaption>Jordan Dziat</figcaption>
     </figure>
   </div>
   <div class="grid-item-1">
     <figure>
-      <p class="img avatar"><img src="https://github.com/github.png?size=168" width="168"></p>
+      <p class="img avatar"><img src="/images/gopher.png" width="168"></p>
       <figcaption>(And 1 other person)</figcaption>
     </figure>
   </div>
