contents/en/documents/2.7: v2.7.6 released

--- a/contents/en/documents/2.7.html
+++ b/contents/en/documents/2.7.html
@@ -124,3 +124,10 @@ Factor</code></a></td>
 <ul>
   <li>Fixed an issue where <code>exp/textinput</code> did not work correctly in browsers (<a href="https://github.com/hajimehoshi/ebiten/issues/3014">#3014</a>).</li>
 </ul>
+<h2>v2.7.6</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/131?closed=1">Issues for v2.7.6</a></p>
+<ul>
+  <li>Fixed an issue where <code>ebiten.WindowSize</code> did not work correctly on macOS (<a href="https://github.com/hajimehoshi/ebiten/issues/3029">#3029</a>).</li>
+  <li>Fixed an issue where the textures on the GPU corresponding to unmanaged <code>ebiten.Image</code> objects were not released even when the images were garbage collected (<a href="https://github.com/hajimehoshi/ebiten/issues/3030">#3030</a>).</li>
+</ul>
