--- a/contents/ja/documents/2.7.html
+++ b/contents/ja/documents/2.7.html
@@ -120,3 +120,10 @@
 <ul>
   <li><code>exp/textinput</code> がブラウザで正しく動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3014">#3014</a>)。</li>
 </ul>
+<h2>v2.7.6</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/131?closed=1">Issues for v2.7.6</a></p>
+<ul>
+  <li>macOS で <code>ebiten.WindowSize</code> が正しく動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3029">#3029</a>)。</li>
+  <li>Unmanaged な <code>ebiten.Image</code> が GC されても、それに対応する GPU 上のテクスチャが解放されなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3030">#3030</a>)。</li>
+</ul>
