contents/en/documents/2.7: v2.7.7 released

--- a/contents/en/documents/2.7.html
+++ b/contents/en/documents/2.7.html
@@ -131,3 +131,9 @@ Factor</code></a></td>
   <li>Fixed an issue where <code>ebiten.WindowSize</code> did not work correctly on macOS (<a href="https://github.com/hajimehoshi/ebiten/issues/3029">#3029</a>).</li>
   <li>Fixed an issue where some objects corresponding to unmanaged <code>ebiten.Image</code> objects were not released even when the images were garbage collected (<a href="https://github.com/hajimehoshi/ebiten/issues/3030">#3030</a>).</li>
 </ul>
+<h2>v2.7.7</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/132?closed=1">Issues for v2.7.7</a></p>
+<ul>
+  <li>Fixed an issue where the canvas size was not correctly initialized when <code>ebiten.SetRunnableOnUnfocused(false)</code> was called first in web browsers (<a href="https://github.com/hajimehoshi/ebiten/issues/3034">#3034</a>).</li>
+</ul>
