--- a/contents/ja/documents/2.7.html
+++ b/contents/ja/documents/2.7.html
@@ -127,3 +127,9 @@
   <li>macOS で <code>ebiten.WindowSize</code> が正しく動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3029">#3029</a>)。</li>
   <li>Unmanaged な <code>ebiten.Image</code> が GC されても、それに対応する一部オブジェクトが解放されなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3030">#3030</a>)。</li>
 </ul>
+<h2>v2.7.7</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/132?closed=1">Issues for v2.7.7</a></p>
+<ul>
+  <li>Web ブラウザで、 <code>ebiten.SetRunnableOnUnfocused(false)</code> を最初に呼んだときに、キャンバスのサイズが正しく初期化されなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3034">#3034</a>)。</li>
+</ul>
