fix misspells in html pages found with aspell

--- a/contents/en/documents/cheatsheet.html
+++ b/contents/en/documents/cheatsheet.html
@@ -130,7 +130,7 @@ func main() {
 <p><code>DrawImageOptions</code> represents options to render an image on an image.</p>
 <h3><code>ebiten.Filter</code></h3>
 <pre><code>type Filter int</code></pre>
-<p>Filter represents the type of texture filter to be used when an image is maginified or minified.</p>
+<p>Filter represents the type of texture filter to be used when an image is magnified or minified.</p>
 <pre><code>const (
     // FilterNearest represents nearest (crisp-edged) filter
     FilterNearest
@@ -175,7 +175,7 @@ func main() {
 <p><code>IsKeyJustPressed</code> returns a boolean value indicating whether the given <code>key</code> is pressed just in the current frame.</p>
 <h3><code>ebiten.Key</code></h3>
 <pre><code>type Key int</code></pre>
-<p>Key represents a keyboard key. These keys represent pysical keys of US keyboard. For example, KeyQ represents Q key on US keyboards and ' (quote) key on Dvorak keyboards.</p>
+<p>Key represents a keyboard key. These keys represent physical keys of US keyboard. For example, KeyQ represents Q key on US keyboards and ' (quote) key on Dvorak keyboards.</p>
 <pre><code>const (
     KeyA Key
     KeyB
