--- a/contents/en/documents/faq.html
+++ b/contents/en/documents/faq.html
@@ -24,4 +24,4 @@
   <li>The sub-images are rendered with scaling or rotating, and</li>
   <li>The parts' graphics on your original image are not continuous.</li>
 </ul>
-<p>In the case of rendering tiles with scaling or rotating, we strongly recommend to use an <code>ebiten.Image</code> as an offscreen. Render tiles on the offscreen, then render the offscren image on the final target as you like.</p>
+<p>In the case of rendering tiles with scaling or rotating, we strongly recommend to use an <code>ebiten.Image</code> as an offscreen. Render tiles on the offscreen, then render the offscreen image on the final target as you like.</p>
