--- a/contents/en/documents/matrix.html
+++ b/contents/en/documents/matrix.html
@@ -24,7 +24,7 @@
   0.8660 & 0.5000  \\
   \end{bmatrix}
   \end{aligned}</p>
-<p>The horizontal sequences are called rows, and the vertical sequences are called columns. If the size is 2, the matrix is called 2D (two-dimensional) matrix, and if 3, 3D (three-dimensional) matrrix. A 3D matrix is like this.</p>
+<p>The horizontal sequences are called rows, and the vertical sequences are called columns. If the size is 2, the matrix is called 2D (two-dimensional) matrix, and if 3, 3D (three-dimensional) matrix. A 3D matrix is like this.</p>
 <p class="math">\begin{aligned}
   \begin{bmatrix}
   0.2990   & 0.5870    & 0.1140  \\
