--- a/contents/en/documents/packages.html
+++ b/contents/en/documents/packages.html
@@ -4,7 +4,7 @@
 <p>The core package of Ebitengine, which provides basic input and drawing functions.</p>
 <h2><code>github.com/hajimehoshi/ebiten/v2/audio</code></h2>
 <p><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/audio">API Reference</a></p>
-<p>The package to provide audio funcitons to play sound.</p>
+<p>The package to provide audio functions to play sound.</p>
 <h2><code>github.com/hajimehoshi/ebiten/v2/audio/mp3</code></h2>
 <p><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/audio/mp3">API Reference</a></p>
 <p>The package to provide MP3 decoder.</p>
