--- a/contents/en/tour/image.html
+++ b/contents/en/tour/image.html
@@ -35,7 +35,7 @@
       <li><a href="https://golang.org/pkg/os/#Open"><code>os.Open</code></a>: This is the most fundamental way to get a data for an image, but is not portable since this works only on desktops. To make matters worse, the working directory affects the result.</li>
       <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/ebitenutil#OpenFile"><code>ebitenutil.OpenFile</code></a>: This is a little better than <code>os.Open</code>. This works even on browsers, but does not work on mobiles. <code>ebitenutil.NewImageFromFile</code> is the shortcut to call this <code>OpenFile</code> and <code>NewImageFromImage</code> internally.</li>
       <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/ebitenutil#NewImageFromURL"><code>ebitenutil.NewImageFromURL</code></a>: This obtains an image from a specified URL. This is portable and working directory doesn't affect the result, but requires networking.</li>
-      <li>Embedding an image file into a Go file: The most portable way is to embed the image in Go file. If you are using Go 1.16 or newer, you can use <a href="https://golang.org/pkg/embed/"><code>go:embed</code></a> to embed a file into a Go program. Otherwiser, you can some tools e.g. <a href="https://github.com/rakyll/statik">statik</a> or <a href="https://github.com/hajimehoshi/file2byteslice">file2byteslice</a>. This works everywhere and is deterministic.</li>
+      <li>Embedding an image file into a Go file: The most portable way is to embed the image in Go file. If you are using Go 1.16 or newer, you can use <a href="https://golang.org/pkg/embed/"><code>go:embed</code></a> to embed a file into a Go program. Otherwise, you can some tools e.g. <a href="https://github.com/rakyll/statik">statik</a> or <a href="https://github.com/hajimehoshi/file2byteslice">file2byteslice</a>. This works everywhere and is deterministic.</li>
     </ul>
     <p>As an image can be reused unless disposing, the image is created once in init function.</p>
   </div>
@@ -43,6 +43,6 @@
     <pre data-codesrc="/go/renderimage/main.go" data-codelinerange="28"></pre>
   </div>
   <div class="grid-item-2">
-    <p>Draws an image on an image by <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Image.DrawImage"><code>(*Image).DrawImage</code></a>. This function draws a given image onto the receiver image. The second argument is an option to indicate where to put the image, how colors are changed, which filter is applied, and so on. As <code>nil</code> is given here, the image is rendered at the default position (upper-left corder), without changing any colors.</p>
+    <p>Draws an image on an image by <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Image.DrawImage"><code>(*Image).DrawImage</code></a>. This function draws a given image onto the receiver image. The second argument is an option to indicate where to put the image, how colors are changed, which filter is applied, and so on. As <code>nil</code> is given here, the image is rendered at the default position (upper-left corner), without changing any colors.</p>
   </div>
 </div>
