contents/index: update sponsors

--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -107,6 +107,12 @@
   </div>
   <div class="grid-item-1">
     <figure>
+      <p class="img avatar"><a href="https://github.com/nathany"><img src="https://github.com/nathany.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/nathany">Nathan Youngman さん</a></figcaption>
+    </figure>
+  </div>
+  <div class="grid-item-1">
+    <figure>
       <p class="img avatar"><img src="/images/gopher.png" width="168"></p>
       <figcaption>(他 1 名)</figcaption>
     </figure>
