contents/ja/documents/2.7: v2.7.9 released

--- a/contents/en/documents/2.7.html
+++ b/contents/en/documents/2.7.html
@@ -146,3 +146,9 @@ Factor</code></a></td>
   <li>Fixed a crash issue when dropping an HTML element onto the game screen canvas in a browser (<a href="https://github.com/hajimehoshi/ebiten/issues/3043">#3043</a>).</li>
   <li>Fixed an issue where multiple identical controllers did not function correctly when connected on Windows (<a href="https://github.com/hajimehoshi/ebiten/issues/3046">#3046</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/3047">#3047</a>).</li>
 </ul>
+<h2>v2.7.9</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/134?closed=1">Issues for v2.7.9</a></p>
+<ul>
+  <li>Fixed an issue where calling <code>Open(".")</code> on the return value of <code>ebiten.DroppedFiles()</code> would always return the same object (<a href="https://github.com/hajimehoshi/ebiten/issues/3081">#3081</a>).</li>
+</ul>
