--- a/contents/ja/documents/2.7.html
+++ b/contents/ja/documents/2.7.html
@@ -142,3 +142,9 @@
   <li>ブラウザで HTML 要素をゲーム画面の Canvas 上にドロップするとクラッシュする問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3043">#3043</a>)。</li>
   <li>Windows で複数の同じコントローラーを接続したときに正しく動作しない問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3046">#3046</a>、 <a href="https://github.com/hajimehoshi/ebiten/issues/3047">#3047</a>)。</li>
 </ul>
+<h2>v2.7.9</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/134?closed=1">Issues for v2.7.9</a></p>
+<ul>
+  <li><code>ebiten.DroppedFiles()</code> の戻り値に対して <code>Open(".")</code> を呼ぶと、常に同じオブジェクトを返してしまっていた問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3081">#3081</a>)。</li>
+</ul>
