contents/en/documents/2.8: typo

--- a/contents/en/documents/2.8.html
+++ b/contents/en/documents/2.8.html
@@ -72,12 +72,12 @@
     <td><a href="https://github.com/hajimehoshi/ebiten/issues/3006">#3006</a></td>
   </tr>
   <tr>
-    <td><code>ebiten.FillNonZero</code></td>
+    <td><code>ebiten.NonZero</code></td>
     <td><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#FillRuleNoneZero"><code>ebiten.FillRuleNoneZero</code></a></td>
     <td><a href="https://github.com/hajimehoshi/ebiten/issues/3006">#3006</a></td>
   </tr>
   <tr>
-    <td><code>ebiten.FillEvenOdd</code></td>
+    <td><code>ebiten.EvenOdd</code></td>
     <td><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#FillRuleEvenOdd"><code>ebiten.FillRuleEvenOdd</code></a></td>
     <td><a href="https://github.com/hajimehoshi/ebiten/issues/3006">#3006</a></td>
   </tr>
