--- a/contents/en/documents/2.8.html
+++ b/contents/en/documents/2.8.html
@@ -22,11 +22,11 @@
 <p>Four new <code>float32</code> members—<code>Custom0</code>, <code>Custom1</code>, <code>Custom2</code>, and <code>Custom3</code>—have been added to the <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Vertex"><code>ebiten.Vertex</code></a> structure as custom elements. This allows for more complex processing using Kage, the custom shader.</p>
 <p>Correspondingly, the signature of the <code>Fragment</code> function in Kage has been updated. When using custom elements, use the signature that accepts <code>custom vec4</code>.</p>
 <ul>
-  <li><code>func Fragment()</code></li>
-  <li><code>func Fragment(dstPos vec4)</code></li>
-  <li><code>func Fragment(dstPos vec4, srcPos vec2)</code></li>
-  <li><code>func Fragment(dstPos vec4, srcPos vec2, color vec4)</code></li>
-  <li><code>func Fragment(dstPos vec4, srcPos vec2, color vec4, custom vec4)</code></li>
+  <li><code>func Fragment() vec4</code></li>
+  <li><code>func Fragment(dstPos vec4) vec4</code></li>
+  <li><code>func Fragment(dstPos vec4, srcPos vec2) vec4</code></li>
+  <li><code>func Fragment(dstPos vec4, srcPos vec2, color vec4) vec4</code></li>
+  <li><code>func Fragment(dstPos vec4, srcPos vec2, color vec4, custom vec4) vec4</code></li>
 </ul>
 <h3>Improved Portability of <code>exp/textinput</code></h3>
 <p><a href="https://github.com/hajimehoshi/ebiten/issues/3072">Issue #3072</a></p>
