contents/en/documents/2.8: Ebitengine v2.8.1 released

--- a/contents/en/documents/2.8.html
+++ b/contents/en/documents/2.8.html
@@ -105,3 +105,9 @@
 <ul>
   <li>The return type of <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/text/v2#GoTextFaceSource.UnsafeInternal"><code>(*GoTextFaceSource).UnsafeInternal()</code></a> in <code>text/v2</code> has been changed from <a href="https://pkg.go.dev/github.com/go-text/typesetting/opentype/api/font#Face"><code>font.Face</code></a> to <code>any</code> due to an update in the dependent library <a href="https://github.com/go-text/typesetting"><code>go-text/typesetting</code></a>.</li>
 </ul>
+<h2>v2.8.1</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/136?closed=1">Issues for v2.8.1</a></p>
+<ul>
+  <li>Fixed an issue where sound sometimes did not play in the browser (<a href="https://github.com/hajimehoshi/ebiten/issues/3122">#3122</a>).</li>
+</ul>
