--- a/contents/ja/documents/2.8.html
+++ b/contents/ja/documents/2.8.html
@@ -105,3 +105,9 @@
 <ul>
   <li><code>text/v2</code> の <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/text/v2#GoTextFaceSource.UnsafeInternal"><code>(*GoTextFaceSource).UnsafeInternal()</code></a> の戻り値の型が、 <a href="https://pkg.go.dev/github.com/go-text/typesetting/opentype/api/font#Face"><code>font.Face</code></a> から <code>any</code> に変更されました。これは依存ライブラリである <a href="https://github.com/go-text/typesetting"><code>go-text/typesetting</code></a> のバージョンアップデートに伴うものです。</li>
 </ul>
+<h2>v2.8.1</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/136?closed=1">Issues for v2.8.1</a></p>
+<ul>
+  <li>ブラウザで音が再生しないことがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3122">#3122</a>)。</li>
+</ul>
