contents/en/showcase: add Fishing Paradiso

--- a/contents/en/showcase.html
+++ b/contents/en/showcase.html
@@ -14,6 +14,11 @@
   <p class="img"><a href="https://drkobushi.com/"><img src="/images/showcase/drkobushi.jpg" width="744"></a></p>
   <figcaption>Copyright <a href="https://symbolic.software/">Symbolic Software</a></figcaption>
 </figure>
+<h2>Fishing Paradiso</h2>
+<figure>
+  <p class="img"><a href="https://odencat.com/fishingparadiso/en.html"><img src="/images/showcase/fishingparadiso_en.jpg" width="744"></a></p>
+  <figcaption>Copyright <a href="https://odencat.com">Odencat</a></figcaption>
+</figure>
 <h2>Bear's Restaurant</h2>
 <figure>
   <p class="img"><a href="https://odencat.com/bearsrestaurant/switch/en.html"><img src="/images/showcase/bearsrestaurant_en.jpg" width="744"></a></p>
