--- a/contents/ja/showcase.html
+++ b/contents/ja/showcase.html
@@ -14,6 +14,11 @@
   <p class="img"><a href="https://drkobushi.com/"><img src="/images/showcase/drkobushi.jpg" width="744"></a></p>
   <figcaption>Copyright <a href="https://symbolic.software/">Symbolic Software</a></figcaption>
 </figure>
+<h2>フィッシングパラダイス</h2>
+<figure>
+  <p class="img"><a href="https://odencat.com/fishingparadiso/ja.html"><img src="/images/showcase/fishingparadiso_ja.jpg" width="744"></a></p>
+  <figcaption>Copyright <a href="https://odencat.com">Odencat</a></figcaption>
+</figure>
 <h2>くまのレストラン</h2>
 <figure>
   <p class="img"><a href="https://odencat.com/bearsrestaurant/switch/ja.html"><img src="/images/showcase/bearsrestaurant_ja.jpg" width="744"></a></p>
