contents/en/showcase: add Inside the Crystal Mountain

--- a/contents/en/showcase.html
+++ b/contents/en/showcase.html
@@ -1,4 +1,9 @@
 <h1>Showcase</h1>
+<h2>Inside the Crystal Mountain</h2>
+<figure>
+  <p class="img"><a href="https://www.intrugligames.com/inside-the-crystal-mountain.html"><img src="/images/showcase/insidethecrystalmountain.png" width="744"></a></p>
+  <figcaption>Copyright <a href="https://www.intrugligames.com/">Intrugli Games</a></figcaption>
+</figure>
 <h2>Meg's Monster</h2>
 <figure>
   <p class="img"><a href="https://odencat.com/bakemono/en.html"><img src="/images/showcase/megsmonster_en.png" width="744"></a></p>
