--- a/contents/ja/showcase.html
+++ b/contents/ja/showcase.html
@@ -1,4 +1,9 @@
 <h1>ショーケース</h1>
+<h2>Inside the Crystal Mountain</h2>
+<figure>
+  <p class="img"><a href="https://www.intrugligames.com/inside-the-crystal-mountain.html"><img src="/images/showcase/insidethecrystalmountain.png" width="744"></a></p>
+  <figcaption>Copyright <a href="https://www.intrugligames.com/">Intrugli Games</a></figcaption>
+</figure>
 <h2>メグとばけもの</h2>
 <figure>
   <p class="img"><a href="https://odencat.com/bakemono/ja.html"><img src="/images/showcase/megsmonster_ja.png" width="744"></a></p>
