contents/en/documents/2.8: Ebitengine v2.8.2 released

--- a/contents/en/documents/2.8.html
+++ b/contents/en/documents/2.8.html
@@ -111,3 +111,9 @@
 <ul>
   <li>Fixed an issue where sound sometimes did not play in the browser (<a href="https://github.com/hajimehoshi/ebiten/issues/3122">#3122</a>).</li>
 </ul>
+<h2>v2.8.2</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/137?closed=1">Issues for v2.8.2</a></p>
+<ul>
+  <li>Fixed an issue where compilation failed when certain assignment operators were included in Kage shaders (<a href="https://github.com/hajimehoshi/ebiten/issues/3140">#3140</a>).</li>
+</ul>
