--- a/contents/ja/documents/2.8.html
+++ b/contents/ja/documents/2.8.html
@@ -111,3 +111,9 @@
 <ul>
   <li>ブラウザで音が再生しないことがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3122">#3122</a>)。</li>
 </ul>
+<h2>v2.8.2</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/137?closed=1">Issues for v2.8.2</a></p>
+<ul>
+  <li>Kage シェーダーに一部の代入演算子を含むとコンパイルできなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3140">#3140</a>)。</li>
+</ul>
