contents/en/documents/2.8: Ebitengine v2.8.3 released

--- a/contents/en/documents/2.8.html
+++ b/contents/en/documents/2.8.html
@@ -117,3 +117,9 @@
 <ul>
   <li>Fixed an issue where compilation failed when certain assignment operators were included in Kage shaders (<a href="https://github.com/hajimehoshi/ebiten/issues/3140">#3140</a>).</li>
 </ul>
+<h2>v2.8.3</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/138?closed=1">Issues for v2.8.3</a></p>
+<ul>
+  <li>Fixed an issue where <code>inpututil.AppendJustReleasedGamepadButtons</code> and <code>inpututil.AppendJustReleasedStandardGamepadButtons</code> did not return correct values. (<a href="https://github.com/hajimehoshi/ebiten/issues/3147">#3147</a>).</li>
+</ul>
