--- a/contents/ja/documents/2.8.html
+++ b/contents/ja/documents/2.8.html
@@ -117,3 +117,9 @@
 <ul>
   <li>Kage シェーダーに一部の代入演算子を含むとコンパイルできなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3140">#3140</a>)。</li>
 </ul>
+<h2>v2.8.3</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/138?closed=1">Issues for v2.8.3</a></p>
+<ul>
+  <li><code>inpututil.AppendJustReleasedGamepadButtons</code> と <code>inpututil.AppendJustReleasedStandardGamepadButtons</code> が正しい値を返さなかった問題の修正。 (<a href="https://github.com/hajimehoshi/ebiten/issues/3147">#3147</a>)。</li>
+</ul>
