contents/en/documents/2.8: Ebitengine v2.8.4 released

--- a/contents/en/documents/2.8.html
+++ b/contents/en/documents/2.8.html
@@ -121,5 +121,11 @@
 <h3>Bug Fixes</h3>
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/138?closed=1">Issues for v2.8.3</a></p>
 <ul>
-  <li>Fixed an issue where <code>inpututil.AppendJustReleasedGamepadButtons</code> and <code>inpututil.AppendJustReleasedStandardGamepadButtons</code> did not return correct values. (<a href="https://github.com/hajimehoshi/ebiten/issues/3147">#3147</a>).</li>
+  <li>Fixed an issue where <code>inpututil.AppendJustReleasedGamepadButtons</code> and <code>inpututil.AppendJustReleasedStandardGamepadButtons</code> did not return correct values (<a href="https://github.com/hajimehoshi/ebiten/issues/3147">#3147</a>).</li>
+</ul>
+<h2>v2.8.4</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/139?closed=1">Issues for v2.8.4</a></p>
+<ul>
+  <li>Fixed an issue where applications would sometimes fail to launch in Linux or UNIX Wayland environments (<a href="https://github.com/hajimehoshi/ebiten/issues/3152">#3152</a>).</li>
 </ul>
