--- a/contents/ja/documents/2.8.html
+++ b/contents/ja/documents/2.8.html
@@ -121,5 +121,11 @@
 <h3>バグ修正</h3>
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/138?closed=1">Issues for v2.8.3</a></p>
 <ul>
-  <li><code>inpututil.AppendJustReleasedGamepadButtons</code> と <code>inpututil.AppendJustReleasedStandardGamepadButtons</code> が正しい値を返さなかった問題の修正。 (<a href="https://github.com/hajimehoshi/ebiten/issues/3147">#3147</a>)。</li>
+  <li><code>inpututil.AppendJustReleasedGamepadButtons</code> と <code>inpututil.AppendJustReleasedStandardGamepadButtons</code> が正しい値を返さなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3147">#3147</a>)。</li>
+</ul>
+<h2>v2.8.4</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/139?closed=1">Issues for v2.8.4</a></p>
+<ul>
+  <li>Linux または UNIX の Wayland 環境でアプリケーションが起動しないことがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3152">#3152</a>)。</li>
 </ul>
