--- a/contents/index.html
+++ b/contents/index.html
@@ -107,6 +107,12 @@
   </div>
   <div class="grid-item-1">
     <figure>
+      <p class="img avatar"><a href="https://github.com/mcuadros"><img src="https://github.com/mcuadros.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/mcuadros">Máximo Cuadros</a></figcaption>
+    </figure>
+  </div>
+  <div class="grid-item-1">
+    <figure>
       <p class="img avatar"><img src="/images/gopher.png" width="168"></p>
       <figcaption>(And 1 other person)</figcaption>
     </figure>
