contents/en/documents/2.8: Ebitengine v2.8.5 released

--- a/contents/ja/documents/2.8.html
+++ b/contents/ja/documents/2.8.html
@@ -129,3 +129,9 @@
 <ul>
   <li>Linux または UNIX の Wayland 環境でアプリケーションが起動しないことがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3152">#3152</a>)。</li>
 </ul>
+<h2>v2.8.5</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/140?closed=1">Issues for v2.8.5</a></p>
+<ul>
+  <li>Windows で <code>ebiten.SetWindowDecorated(false)</code> を呼んだときに、ウィンドウが画面上部に配置できなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3118">#3118</a>)。</li>
+</ul>
