--- a/contents/en/documents/2.8.html
+++ b/contents/en/documents/2.8.html
@@ -129,3 +129,9 @@
 <ul>
   <li>Fixed an issue where applications would sometimes fail to launch in Linux or UNIX Wayland environments (<a href="https://github.com/hajimehoshi/ebiten/issues/3152">#3152</a>).</li>
 </ul>
+<h2>v2.8.5</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/140?closed=1">Issues for v2.8.5</a></p>
+<ul>
+  <li>Fixed an issue where the window could not be positioned at the top of the screen when calling <code>ebiten.SetWindowDecorated(false)</code> on Windows (<a href="https://github.com/hajimehoshi/ebiten/issues/3118">#3118</a>).</li>
+</ul>
