--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -95,6 +95,12 @@
   </div>
   <div class="grid-item-1">
     <figure>
+      <p class="img avatar"><img src="/images/gopher.png" width="168"></p>
+      <figcaption>Paprika さん</figcaption>
+    </figure>
+  </div>
+  <div class="grid-item-1">
+    <figure>
       <p class="img avatar"><a href="https://github.com/smsunarto"><img src="https://github.com/smsunarto.png?size=168" width="168"></a></p>
       <figcaption><a href="https://github.com/smsunarto">Scott Sunarto さん</a></figcaption>
     </figure>
@@ -115,12 +121,6 @@
     <figure>
       <p class="img avatar"><a href="https://github.com/m110"><img src="https://github.com/m110.png?size=168" width="168"></a></p>
       <figcaption><a href="https://github.com/m110">Miłosz Smółka さん</a></figcaption>
-    </figure>
-  </div>
-  <div class="grid-item-1">
-    <figure>
-      <p class="img avatar"><img src="/images/gopher.png" width="168"></p>
-      <figcaption>(他 1 名)</figcaption>
     </figure>
   </div>
 </div>
