contents/en/showcase: add Snowman Story

--- a/contents/en/showcase.html
+++ b/contents/en/showcase.html
@@ -1,4 +1,9 @@
 <h1>Showcase</h1>
+<h2>Snowman Story</h2>
+<figure>
+  <p class="img"><a href="https://odencat.com/snowman/en.html"><img src="/images/showcase/snowmanstory_en.png" width="744"></a></p>
+  <figcaption>Copyright <a href="https://odencat.com">Odencat</a></figcaption>
+</figure>
 <h2>Inside the Crystal Mountain</h2>
 <figure>
   <p class="img"><a href="https://www.intrugligames.com/inside-the-crystal-mountain.html"><img src="/images/showcase/insidethecrystalmountain.png" width="744"></a></p>
