contents/en/documents/2.8: v2.8.6 released

--- a/contents/en/documents/2.8.html
+++ b/contents/en/documents/2.8.html
@@ -135,3 +135,9 @@
 <ul>
   <li>Fixed an issue where the window could not be positioned at the top of the screen when calling <code>ebiten.SetWindowDecorated(false)</code> on Windows (<a href="https://github.com/hajimehoshi/ebiten/issues/3118">#3118</a>).</li>
 </ul>
+<h2>v2.8.6</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/141?closed=1">Issues for v2.8.6</a></p>
+<ul>
+  <li>Fix an issue where a race condition during seeking in an audio player could cause noise (<a href="https://github.com/hajimehoshi/ebiten/issues/3173">#3173</a>)</li>
+</ul>
