--- a/contents/ja/documents/2.8.html
+++ b/contents/ja/documents/2.8.html
@@ -135,3 +135,9 @@
 <ul>
   <li>Windows で <code>ebiten.SetWindowDecorated(false)</code> を呼んだときに、ウィンドウが画面上部に配置できなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3118">#3118</a>)。</li>
 </ul>
+<h2>v2.8.6</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/141?closed=1">Issues for v2.8.6</a></p>
+<ul>
+  <li>オーディオプレーヤーのシーク時にレースコンディションが発生し、ノイズが発生することがある問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3173">#3173</a>)</li>
+</ul>
