--- a/contents/ja/documents/webassembly.html
+++ b/contents/ja/documents/webassembly.html
@@ -16,9 +16,18 @@ Remove-Item Env:GOOS
 Remove-Item Env:GOARCH</code></pre>
 <h3>WebAssembly バイナリを実行するための <code>wasm_exec.js</code> のコピー</h3>
 <p>Unix/Linux シェルの場合:</p>
-<pre><code>cp $(go env GOROOT)/misc/wasm/wasm_exec.js .</code></pre>
+<pre><code># Go 1.24 以後
+cp $(go env GOROOT)/lib/wasm/wasm_exec.js .
+
+# Go 1.23 以前
+cp $(go env GOROOT)/misc/wasm/wasm_exec.js .</code></pre>
 <p>Windows PowerShell の場合:</p>
 <pre><code>$goroot = go env GOROOT
+
+# Go 1.24 以後
+cp $goroot\lib\wasm\wasm_exec.js .
+
+# Go 1.23 以前
 cp $goroot\misc\wasm\wasm_exec.js .</code></pre>
 <h3>HTML の作成</h3>
 <p>次のような HTML を作成してください:</p>
