--- a/contents/en/tour/hello_world.html
+++ b/contents/en/tour/hello_world.html
@@ -74,13 +74,13 @@ go mod init foo # or github.com/yourname/yourgame or something</code></pre>
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="25-25"></pre>
   </div>
   <div class="grid-item-2">
-    <p><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetWindowSize">ebiten.SetWindowSize</a></code> sets the window's size. Without calling this, the default window size is used.</code></p>
+    <p><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetWindowSize">ebiten.SetWindowSize</a></code> sets the window's size. Without calling this, the default window size is used.</p>
   </div>
   <div class="grid-item-2">
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="26-26"></pre>
   </div>
   <div class="grid-item-2">
-    <p><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetWindowTitle">ebiten.SetWindowTitle</a></code> sets the window's title.</code></p>
+    <p><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetWindowTitle">ebiten.SetWindowTitle</a></code> sets the window's title.</p>
   </div>
   <div class="grid-item-2">
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="27-30"></pre>
