--- a/contents/ja/tour/hello_world.html
+++ b/contents/ja/tour/hello_world.html
@@ -1,91 +1,91 @@
-<h1>Hello, World!</h1>
-<p>As the first Ebitengine game, let's show the message 'Hello, World!'.</p>
-<p>Before executing the program, you need to install Ebitengine. See <a href="/en/documents/install.html">the instruction to install Ebitengine</a>.</p>
-<h2>Code</h2>
-<p>This tour assumes that you are in a working directory with <code>go.mod</code>. If not, please try these commands to create a directory and a <code>go.mod</code> file.</p>
+<h1>ハローワールド！</h1>
+<p>最初の Ebitengine のゲームとして、「 Hello, World! 」と表示してみましょう！</p>
+<p>プログラムを実行する前に、Ebitengine をインストールする必要があります。<a href="/ja/documents/install.html">Ebitengine のインストール方法</a>を参照してください。</p>
+<h2>コード</h2>
+<p>このツアーではあなたが <code>go.mod</code> ファイルと同じディレクトリで作業していることを想定しています。そうでなければ、以下のコマンドでディレクトリと <code>go.mod</code> ファイルを作成してください。</p>
 <pre><code>mkdir yourgame
 cd yourgame
-go mod init foo # or github.com/yourname/yourgame or something</code></pre>
-<p>Create a file <code>main.go</code> like this:</p>
+go mod init foo # もしくは github.com/yourname/yourgame など</code></pre>
+<p><code>main.go</code> を以下のように作成します：</p>
 <pre data-codesrc="/go/helloworld/main.go"></pre>
-<p>If you have just initialized the <code>go.mod</code> file by <code>go mod init</code>, please run this command to resolve dependencies.</p>
+<p><code>go.mod</code> ファイルを <code>go mod init</code> で初期化したばかりの場合は、このコマンドで依存関係を解決します。</p>
 <pre><code>go mod tidy</code></pre>
-<p>Then, execute this Go program by <code>go run</code>:</p>
+<p>その後、<code>go run</code> で Go のプログラムを実行します：</p>
 <pre><code>go run main.go</code></pre>
 <div class="grid-container">
   <div class="grid-item-2">
-    <p>If you see the screen with the text 'Hello, World!', congratulations, your program succeeded to work!:</p>
+    <p>画面に「 Hello, World 」というテキストが表示されたら、プログラムが正常に動作しています！おめでとうございます！</p>
   </div>
   <div class="grid-item-2">
     <p class="img screenshot"><img src="/images/go/helloworld.png" width="320" height="240"></p>
   </div>
 </div>
-<h2>How the code works</h2>
+<h2>コードの仕組み</h2>
 <div class="grid-container">
   <div class="grid-item-2">
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="1-8"></pre>
   </div>
   <div class="grid-item-2">
-    <p>Imports Ebitengine packages. This program imports two packages: <code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2">github.com/hajimehoshi/ebiten/v2</a></code> and <code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/ebitenutil">github.com/hajimehoshi/ebiten/v2/ebitenutil</a></code>.</p>
-    <p><code>github.com/hajimehoshi/ebiten/v2</code> is the core package of Ebitengine, which provides functions for drawing and inputs.</p>
-    <p><code>github.com/hajimehoshi/ebiten/v2/ebitenutil</code> is the utility package of Ebitengine. In this program, this package is used to print a debug message on the screen.</p>
-    <p>There are other several packages in Ebitengine. See <a href="/en/documents/packages.html">the packages page</a> for more details.</p>
+    <p>Ebitengine のパッケージをインポートします。このプログラムでは 2 つのパッケージをインポートします： <br><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2">github.com/hajimehoshi/ebiten/v2</a></code> <br><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/ebitenutil">github.com/hajimehoshi/ebiten/v2/ebitenutil</a></code></p>
+    <p><code>github.com/hajimehoshi/ebiten/v2</code> は描画と入力の機能を提供する Ebitengine のコアパッケージです。</p>
+    <p><code>github.com/hajimehoshi/ebiten/v2/ebitenutil</code> は Ebitengine のユーティリティパッケージです。このプログラムでは、このパッケージを使用してデバッグメッセージを画面に表示します。</p>
+    <p>Ebitengine には他にもいくつかのパッケージがあります。 詳細については<a href="/en/documents/packages.html">パッケージのページ</a>を参照してください。</p>
   </div>
   <div class="grid-item-2">
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="10-10"></pre>
   </div>
   <div class="grid-item-2">
-    <p>Defines <code>Game</code> struct. <code>Game</code> implements <code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Game">ebiten.Game</a></code> interface. <code>ebiten.Game</code> has necessary functions for an Ebitengine game: <code>Update</code>, <code>Draw</code> and <code>Layout</code>. Let's see them one by one.</p>
+    <p><code>Game</code> 構造体を定義します。<code>Game</code> は <code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Game">ebiten.Game</a></code> インターフェースを実装したものです。 <code>ebiten.Game</code> は Ebitengine のゲームに必須な関数である <code>Update</code> 、<code>Draw</code> 、<code>Layout</code> を持っています。 1 つずつ見ていきましょう。</p>
   </div>
   <div class="grid-item-2">
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="12-14"></pre>
   </div>
   <div class="grid-item-2">
-    <p>Defines <code>(*Game).Update</code> function, that is called every tick. Tick is a time unit for logical updating. The default value is 1/60 [s], then <code>Update</code> is called 60 times per second by default (i.e. an Ebitengine game works in 60 ticks-per-second).</p>
-    <p><code>Update</code> updates the game's logical state. This hello-world example doesn't have any state and then this function does nothing.</p>
-    <p><code>Update</code> returns an error value. In this code, <code>Update</code> always returns <code>nil</code>. In general, when updating function returns a non-nil error, the Ebitengine game suspends. As this program never returns a non-nil error, the Ebitengine game never stops unless the user closes the window.</p>
+    <p>毎ティック呼び出される <code>(*Game).Update</code> 関数を定義します。ティックは論理的な更新の時間単位です。デフォルト値は 1/60 [s] で、<code>Update</code> が 1 秒あたり 60 回呼び出されます（言い換えれば、Ebitengine のゲームは秒間 60 ティックで動作します）。</p>
+    <p><code>Update</code> はゲームの論理的な状態を更新します。このハローワールドの例では何の状態も保持していないため、この関数では何も行っていません。</p>
+    <p><code>Update</code> はエラーの値を返します。このコードでは <code>Update</code> は常に <code>nil</code> を返しています。一般に、更新関数が nil 以外のエラーを返すと、Ebitengine のゲームは中断されます。このプログラムでは nil 以外を返さないため、ユーザがウィンドウを閉じない限り、Ebitengine のゲームは停止しません。</p>
   </div>
   <div class="grid-item-2">
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="16-16"></pre>
   </div>
   <div class="grid-item-2">
-    <p>Defines <code>(*Game).Draw</code> function, that is called every frame. Frame is a time unit for rendering and this depends on the display's refresh rate. If the monitor's refresh rate is 60 [Hz], <code>Draw</code> is called 60 times per second.</p>
-    <p><code>Draw</code> takes an argument <code>screen</code>, which is a pointer to an <code>ebiten.Image</code>. In Ebitengine, all images like images created from image files, offscreen images (temporary render target), and the screen are represented as <code>ebiten.Image</code> objects. <code>screen</code> argument is the final destination of rendering. The window shows the final state of <code>screen</code> every frame.</p>
+    <p>毎フレーム呼び出される <code>(*Game).Draw</code> 関数を定義します。フレームはレンダリングの時間単位で、ディスプレイのリフレッシュレートによって異なります。モニターのリフレッシュレートが 60 [Hz] の場合、<code>Draw</code> は 1 秒間に 60 回呼び出されます。</p>
+    <p><code>Draw</code> は <code>ebiten.Image</code> へのポインタである引数 <code>screen</code> を取ります。Ebitengine では、画像ファイルから作成された画像、オフスクリーン画像（一次的なレンダーターゲット）、画面などのような全ての画像が <code>ebiten.Image</code> オブジェクトとして表現されます。引数の <code>screen</code> は最終的なレンダリング先です。ウィンドウには <code>screen</code> の最終的な状態が毎フレーム表示されます。</p>
   </div>
   <div class="grid-item-2">
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="17-18"></pre>
   </div>
   <div class="grid-item-2">
-    <p><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/ebitenutil#DebugPrint">ebitenutil.DebugPrint</a></code> is a utility function to render a debug message on an image. In this case, <code>screen</code> is passed as the render target of the debug printing. As <code>screen</code> is reset (or cleared in another word) whenever <code>Draw</code> is called, <code>DebugPrint</code> should be called every time.</p>
+    <p><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/ebitenutil#DebugPrint">ebitenutil.DebugPrint</a></code> は画像上にデバッグメッセージを表示するユーティリティ関数です。この場合では、<code>screen</code> がデバッグ出力の表示先として渡されています。<code>Draw</code> が呼ばれるたびに <code>screen</code> はリセット（別の言葉で言えばクリア）されるので、<code>DebugPrint</code> は毎回呼び出す必要があります。</p>
   </div>
   <div class="grid-item-2">
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="20-22"></pre>
   </div>
   <div class="grid-item-2">
-    <p>Defines <code>(*Game).Layout</code> function. <code>Layout</code> accepts an outside size, which is a window size on desktop, and returns the game's logical screen size. This code ignores the arguments and returns the fixed values. This means that the game screen size is always same, whatever the window's size is. <code>Layout</code> will be more meaningful e.g., when the window is resizable.</p>
+    <p><code>(*Game).Layout</code> 関数を定義します。<code>Layout</code> はデスクトップ上のウィンドウのサイズを引数で受け取り、ゲームの論理的な画面サイズを返します。このコードでは引数を無視して固定値を返しています。つまり、ゲーム画面のサイズは、ウィンドウのサイズによらず常に同じ大きさになります。<code>Layout</code> は、ウィンドウのサイズが変更可能な場合などに、より意味を持ちます。</p>
   </div>
   <div class="grid-item-2">
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="24-24"></pre>
   </div>
   <div class="grid-item-2">
-    <p>Defines the <code>main</code> function, which is the entry point of this program.</p>
+    <p>このプログラムのエントリーポイントである <code>main</code> 関数を定義します。</p>
   </div>
   <div class="grid-item-2">
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="25-25"></pre>
   </div>
   <div class="grid-item-2">
-    <p><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetWindowSize">ebiten.SetWindowSize</a></code> sets the window's size. Without calling this, the default window size is used.</code></p>
+    <p><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetWindowSize">ebiten.SetWindowSize</a></code> ではウィンドウの大きさを設定します。これが呼び出されない場合、デフォルトのウィンドウサイズが使用されます。</p>
   </div>
   <div class="grid-item-2">
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="26-26"></pre>
   </div>
   <div class="grid-item-2">
-    <p><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetWindowTitle">ebiten.SetWindowTitle</a></code> sets the window's title.</code></p>
+    <p><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetWindowTitle">ebiten.SetWindowTitle</a></code> ではウィンドウのタイトルを設定します。</p>
   </div>
   <div class="grid-item-2">
     <pre data-codesrc="/go/helloworld/main.go" data-codelinerange="27-30"></pre>
   </div>
   <div class="grid-item-2">
-    <p><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGame">ebiten.RunGame</a></code> is the function to run the main loop of an Ebitengine game. The argument is a <code>Game</code> object, that implements <code>ebiten.Game</code>. <code>ebiten.RunGame</code> returns a non-nil error value when an error happen. In this program, when a non-nil error is returned, this error is logged as a fatal error.</p>
+    <p><code><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGame">ebiten.RunGame</a></code> は Ebitengine のゲームのメインループを実行する関数です。引数は <code>Game</code> オブジェクトで、これは <code>ebiten.Game</code> を実装したものです。<code>ebiten.RunGame</code> はエラーが起きた際に nil 以外のエラー値を返します。このプログラムでは、nil 以外のエラーが返されると致命的なエラーとしてログに記録します。</p>
   </div>
 </div>
