contents/ja/tour/hello_world: change to capital '!'

--- a/contents/ja/tour/nav.html
+++ b/contents/ja/tour/nav.html
@@ -1,7 +1,7 @@
 <h2>ツアー</h2>
 <h3>はじめる</h3>
 <ul>
-  <li><a href="/ja/tour/hello_world.html">ハローワールド！</a></li>
+  <li><a href="/ja/tour/hello_world.html">ハローワールド !</a></li>
 </ul>
 <h3>グラフィック</h3>
 <ul>
