contents/en/tour/hello_world: translate the page into Japanese (#37)

--- a/contents/ja/tour/index.html
+++ b/contents/ja/tour/index.html
@@ -1,7 +1,7 @@
 <h1>ツアー</h1>
 <h2>はじめる</h2>
 <ul>
-  <li><a href="/en/tour/hello_world.html">Hello, World!</a></li>
+  <li><a href="/ja/tour/hello_world.html">ハローワールド!</a></li>
 </ul>
 <h2>グラフィック</h3>
 <ul>
