en/documents: add steam.html

--- a/contents/en/documents/index.html
+++ b/contents/en/documents/index.html
@@ -2,8 +2,12 @@
 <h2>Install</h2>
 <ul>
   <li><a href="./install.html">Install</a></li>
+</ul>
+<h2>Platforms</h2>
+<ul>
   <li><a href="./mobile.html">Mobile</a></li>
   <li><a href="./webassembly.html">WebAssembly</a></li>
+  <li><a href="./steam.html">Steam</a></li>
 </ul>
 <h2>Features</h2>
 <ul>
