--- a/contents/ja/documents/index.html
+++ b/contents/ja/documents/index.html
@@ -2,8 +2,12 @@
 <h2>インストール</h2>
 <ul>
   <li><a href="./install.html">インストール</a></li>
+</ul>
+<h2>プラットフォーム</h2>
+<ul>
   <li><a href="/en/documents/mobile.html">Mobile</a></li>
   <li><a href="./webassembly.html">WebAssembly</a></li>
+  <li><a href="./steam.html">Steam</a></li>
 </ul>
 <h2>機能</h2>
 <ul>
