--- a/contents/en/documents/nav.html
+++ b/contents/en/documents/nav.html
@@ -2,8 +2,12 @@
 <h3>Install</h3>
 <ul>
   <li><a href="./install.html">Install</a></li>
+</ul>
+<h3>Platforms</h3>
+<ul>
   <li><a href="./mobile.html">Mobile</a></li>
   <li><a href="./webassembly.html">WebAssembly</a></li>
+  <li><a href="./steam.html">Steam</a></li>
 </ul>
 <h3>Features</h3>
 <ul>
