--- a/contents/ja/documents/nav.html
+++ b/contents/ja/documents/nav.html
@@ -2,8 +2,12 @@
 <h3>インストール</h3>
 <ul>
   <li><a href="./install.html">インストール</a></li>
+</ul>
+<h3>プラットフォーム</h3>
+<ul>
   <li><a href="/en/documents/mobile.html">Mobile</a></li>
   <li><a href="./webassembly.html">WebAssembly</a></li>
+  <li><a href="./steam.html">Steam</a></li>
 </ul>
 <h3>機能</h3>
 <ul>
